--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ DB_SCHEMA=public
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=${DB_SCHEMA}&sslmode=prefer
 
 JWT_SECRET=total-secret
+TKN_API_TOKEN=another-secret
