--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/swagger": "^6.0.1",
     "@prisma/client": "^4.0.0",
     "@types/lodash.template": "^4.5.1",
+    "@types/passport-http-bearer": "^1.0.37",
     "@types/passport-jwt": "^3.0.6",
     "argon2": "^0.28.7",
     "class-transformer": "^0.5.1",
@@ -48,6 +49,7 @@
     "helmet": "^5.1.0",
     "lodash.template": "^4.5.0",
     "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
