--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "start:dev:all": "concurrently -n tkn,telegram,stats \"yarn start:dev tutorial-kafka-notifier\" \"yarn start:dev telegram-notifier\" \"yarn start:dev external-stats-provider\""
   },
   "dependencies": {
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
