--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,5 @@ DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_
 
 JWT_SECRET=total-secret
 TKN_ESP_API_KEY=another-secret
+WEB_TN_API_KEY=new-secret
 ESP_URL=http://localhost:5000
