integrate telegram bot

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ JWT_SECRET=total-secret
 TKN_ESP_API_KEY=another-secret
 WEB_TN_API_KEY=new-secret
 ESP_URL=http://localhost:5000
+TELEGRAM_TOKEN=tell_yours:like-this
