--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:dev:tkn": "nest start --watch telegram-kafka-notifier",
+    "start:dev:esp": "nest start --watch external-stats-provider",
+    "start:dev:tn": "nest start --watch telegram-notifier",
     "start:debug": "nest start --debug --watch",
+    "start:debug:tkn": "nest start --debug --watch telegram-kafka-notifier",
+    "start:debug:esp": "nest start --debug --watch external-stats-provider",
+    "start:debug:tn": "nest start --debug --watch telegram-notifier",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -28,7 +34,7 @@
     "prisma:migrate": "npx prisma migrate deploy",
     "prisma:generate": "npx prisma generate",
     "prestart:dev:all": "yarn docker:up",
-    "start:dev:all": "concurrently -n tkn,telegram,stats \"yarn start:dev tutorial-kafka-notifier\" \"yarn start:dev telegram-notifier\" \"yarn start:dev external-stats-provider\""
+    "start:dev:all": "concurrently -n tkn,telegram,stats \"yarn start:dev:tkn\" \"yarn start:dev:tn\" \"yarn start:dev:esp\""
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
@@ -49,13 +55,15 @@
     "express-session": "^1.17.3",
     "helmet": "^5.1.0",
     "lodash.template": "^4.5.0",
+    "nestjs-telegraf": "^2.5.0",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "telegraf": "^4.8.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.5",
