--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ TKN_ESP_API_KEY=another-secret
 WEB_TN_API_KEY=new-secret
 ESP_URL=http://localhost:5000
 TELEGRAM_TOKEN=tell_yours:like-this
+KAFKA_URL=localhost:29092
